[metadata]
name = tissuecyte_annotation
version = 0.1.0
description = "App for tissuecyte annotations"
authors = ["Arjun Sridhar"]
author_email="arjun.sridhar@alleninstitute.org",
url = "https://github.com/arjunsridhar12345/Tissuecyte_Annotation"

[options]
packages=find:
install_requires =
	matplotlib==3.4.2
	numpy==1.21.5
	pandas==1.4.2
	paramiko==2.8.1
	plotly==5.6.0
	PyQt5==5.15.7
	pyqtgraph==0.12.4
	QtRangeSlider==0.1.5
	scikit_learn==1.1.2
	setuptools==61.2.0
	SimpleITK==2.2.0
	visvis==1.13.0
